--- a/addons/ui/org.openhab.ui.cometvisu/.classpath
+++ b/addons/ui/org.openhab.ui.cometvisu/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry exported="true" kind="lib" path="lib/sqlite-jdbc-3.8.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/quercus.jar" sourcepath="C:/Users/tobiasb/Downloads/quercus-4.0.39-src.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/quercus.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/rrd4j-2.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
