--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -231,6 +231,11 @@
         </dependency>
         <dependency>
             <groupId>org.openhab.binding</groupId>
+            <artifactId>org.openhab.binding.enphaseenergy</artifactId>
+            <version>${oh1.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openhab.binding</groupId>
             <artifactId>org.openhab.binding.epsonprojector</artifactId>
             <version>${oh1.version}</version>
         </dependency>
