--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -331,6 +331,11 @@
         </dependency>
         <dependency>
             <groupId>org.openhab.binding</groupId>
+            <artifactId>org.openhab.binding.rwesmarthome</artifactId>
+            <version>${oh1.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openhab.binding</groupId>
             <artifactId>org.openhab.binding.satel</artifactId>
             <version>${oh1.version}</version>
         </dependency>
