Sapp is reported to be OH2-compatible
Signed-off-by: Hakan Tandogan hakan@tandogan.com (github: hakan42)

--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -352,6 +352,11 @@
         </dependency>
         <dependency>
             <groupId>org.openhab.binding</groupId>
+            <artifactId>org.openhab.binding.sapp</artifactId>
+            <version>${oh1.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openhab.binding</groupId>
             <artifactId>org.openhab.binding.systeminfo</artifactId>
             <version>${oh1.version}</version>
         </dependency>
