--- a/distribution/openhabhome/runtime/etc/services.cfg
+++ b/distribution/openhabhome/runtime/etc/services.cfg
@@ -24,6 +24,9 @@ org.jupnp:streamListenPort=8080
 org.jupnp:threadPoolSize=200
 
 com.eclipsesource.jaxrs.connector:root=/rest
+com.eclipsesource.jaxrs.swagger.config:swagger.basePath=/rest
+com.eclipsesource.jaxrs.swagger.config:swagger.host=localhost:8080
+com.eclipsesource.jaxrs.swagger.config:swagger.info.title=openHAB REST API
 
 # Configuration of scheduled thread pool sizes
 org.eclipse.smarthome.threadpool:thingHandler=3
