--- a/distribution/src/assemble/resources/addons/conf/services/sapp.cfg
+++ b/distribution/src/assemble/resources/addons/conf/services/sapp.cfg
@@ -1,14 +1,14 @@
 ################################ Sapp Binding ########################################
 #
 ## polling refresh time in msec, default 100ms
-#sapp:refresh=100
+#refresh=100
 
 ## pnmas list
-#sapp:pnmas.ids=home,office
+#pnmas.ids=home,office
 
 ## pnmas definitions (ip and port). Only the pnmas listed in 'sapp:pnmas.ids' are used
-#sapp:pnmas.home.ip=192.168.50.40
-#sapp:pnmas.home.port=7001
-#sapp:pnmas.office.ip=192.168.1.37
-#sapp:pnmas.office.port=4001
+#pnmas.home.ip=192.168.50.40
+#pnmas.home.port=7001
+#pnmas.office.ip=192.168.1.37
+#pnmas.office.port=4001
 
