replaced sonos binding with ESH version
Signed-off-by: Kai Kreuzer <kai@openhab.org>

--- a/distribution/openhabhome/runtime/etc/services.cfg
+++ b/distribution/openhabhome/runtime/etc/services.cfg
@@ -17,7 +17,7 @@ org.eclipse.smarthome.chart:provider=default
 org.eclipse.smarthome.classicui:defaultSitemap=_default
 
 org.openhab.autoapprove:enabled=false
-org.openhab.binding.sonos:opmlPartnerID=IAeIhU42
+org.eclipse.smarthome.binding.sonos:opmlPartnerID=IAeIhU42
 
 org.jupnp:multicastResponsePort=0
 org.jupnp:streamListenPort=8080
