--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -444,6 +444,11 @@
         </dependency>    	
         <dependency>
             <groupId>org.openhab.action</groupId>
+            <artifactId>org.openhab.action.telegram</artifactId>
+            <version>${oh1.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openhab.action</groupId>
             <artifactId>org.openhab.action.xbmc</artifactId>
             <version>${oh1.version}</version>
         </dependency>    	
